Revert "fix(css): long footerText can overlap Markdown content (#327)" (#329)
This reverts commit e1f6f7866212168fc00c324fb0d813eb55f7d3de.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -249,7 +249,7 @@ a:hover .feather-sun {
   margin-left: 30%;
   overflow: hidden;
   padding: 40px 0;
-  position: relative;
+  position: absolute;
   text-align: center;
   width: 40%;
 }
